Company Membership theme update

--- a/WebApp/src/app/features/administrative/association/association.component.html
+++ b/WebApp/src/app/features/administrative/association/association.component.html
@@ -1,123 +1,125 @@
-<div class="p-card">
+<div class="grid">
+    <div class="col-12">
+        <div class="card">
+            <h4>Association</h4>
+            <div [hidden]="formDisplay">
+                <form action="" [formGroup]="associationForm">
+                    <div class="col-12">
+                        <div class="p-fluid p-formgrid grid">
 
-    <div class="me-auto">
-        <div class="p-card-title ">
-            <span class="pi pi-associations"> </span> Association
-        </div>
-        <div class="p-card-body">
-            <!-- ********** start card body ******************** -->
+                            <div class="field col-12 md:col-6">
+                                <label pTooltip="Country" tooltipPosition="top">Country<span class="req">*</span></label>
+                                <p-dropdown [options]="allCountry" formControlName="country_id"
+                                            [ngClass]="{ 'is-invalid': submitted && f.country_id.errors }" placeholder="---Select---"
+                                            optionLabel="country_name" optionValue="country_id" [showClear]="true" [filter]="true" filterBy="country_name"></p-dropdown>
 
-            <div class="card">
-                <div class="grid mb-2">
-                    <button class="pi pi-plus risBtn risAdd mr-2" (click)="showBasicDialog()"> New</button>
-                    <button class="pi pi-pencil risBtn risEdit mr-2" (click)="loadassociationToEdit()"> Edit</button>
-                    <button class="pi pi-trash risBtn risDelete mr-2" (click)="showDialog()"> Delete</button>
-                </div>
+                                <div *ngIf="submitted && f.country_id.errors" class="invalid-feedback">
+                                    <small *ngIf="f.country_id.errors.required" class="p-error">Country</small>
+                                </div>
+                            </div>
+
+                            <div class="field col-12 md:col-6">
+                                <label pTooltip="Organization Type" tooltipPosition="top">Organization Type<span class="req">*</span></label>
+                                <p-dropdown [options]="allCountry" formControlName="organization_type_id_enum"
+                                            [ngClass]="{ 'is-invalid': submitted && f.organization_type_id_enum.errors }" placeholder="---Select---"
+                                            optionLabel="organization_type_name_enum" optionValue="organization_type_id_enum" [showClear]="true" [filter]="true" filterBy="organization_type_name_enum"></p-dropdown>
+
+                                <div *ngIf="submitted && f.organization_type_id_enum.errors" class="invalid-feedback">
+                                    <small *ngIf="f.organization_type_id_enum.errors.required" class="p-error">Organization Type</small>
+                                </div>
+                            </div>
+
+                            <div class="field form-group col-12 md:col-6">
+                                <label pTooltip="Association Name" tooltipPosition="top">Association Name<span class="req">*</span> </label>
+                                <input id="lastname2" type="text" class="from-control" formControlName="association_name"
+                                       [ngClass]="{ 'is-invalid': submitted && f.association_name.errors }"
+                                       placeholder="" pInputText required />
+
+                                <div *ngIf="submitted && f.association_name.errors" class="invalid-feedback">
+                                    <small *ngIf="f.association_name.errors.required" class="p-error">Association Name is required</small>
+
+                                </div>
+                            </div>
+
+                            <div class="field form-group col-12 md:col-6">
+                                <label pTooltip="Abbreviation" tooltipPosition="top">Abbreviation<span class="req">*</span> </label>
+                                <input id="lastname2" type="text" class="from-control" formControlName="abbreviation"
+                                       [ngClass]="{ 'is-invalid': submitted && f.abbreviation.errors }"
+                                       placeholder="" pInputText required />
+
+                                <div *ngIf="submitted && f.association_name.errors" class="invalid-feedback">
+                                    <small *ngIf="f.abbreviation.errors.required" class="p-error">Association Name is required</small>
+
+                                </div>
+                            </div>
+
+                            <div class="p-fluid grid col-12">
+                                <div class="col-4 mt-2 text-right">
+                                    <label for="" class=" d-none d-md-inline-flex">Abbreviation:</label>
+                                </div>
+                                <div class="col-8 p-fluid">
+                                    <span class="p-float-label">
+                                        <input id="float-input p-fluid" formControlName="abbreviation" type="text" placeholder="Abbreviation" pInputText autocomplete="off">
+                                    </span>
+                                </div>
+                            </div>
+
+                            <div class="field col-12 md:col-6">
+                                <label>Remarks </label>
+                                <input id="lastname2" type="text" formControlName="remarks" placeholder="remarks" pInputText />
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="flex justify-content-end pr-2">
+                        <button pButton pRipple type="button" (click)="onFormSubmit()" label="Save" class="risBtn risSave mr-2 mb-2" icon="pi pi-check"></button>
+                        <button pButton pRipple type="button" (click)="toggleFormClose()" label="Close" class="risBtn risClose mr-2 mb-2" icon="pi pi-times"></button>
+                    </div>
+
+                </form>
+            </div>
+
+            <!--end form display------------->
+
+            <div [hidden]="gridDisplay">
+                <button pButton pRipple type="button" (click)="showBasicDialog()" label="New" icon="pi pi-plus" class="risBtn risAdd mr-2 mb-2"></button>
+                <button pButton pRipple type="button" (click)="loadassociationToEdit()" label="Edit" icon="pi pi-pencil" class="risBtn risEdit mr-2 mb-2"></button>
+                <button pButton pRipple type="button" (click)="showDialog()" label="Delete" icon="pi pi-trash" class="risBtn risDelete mr-2 mb-2"></button>
 
                 <p-dialog header="Delete Record" [(visible)]="display" [style]="{width: '35vw'}">
                     <p>Do you want to delete this record?</p>
                     <ng-template pTemplate="footer">
+                        <button class="pi pi-check risBtn risSave" (click)="deleteAssociationInfo()"> Yes</button>
                         <button class="pi pi-times risBtn risClose" (click)="display=false"> No</button>
-                        <button class="pi pi-check risBtn risSave" (click)="deleteRegistryAuthorityInfo()"> Yes</button>
                     </ng-template>
                 </p-dialog>
 
-                <div class="card-body">
 
-                    <p-dialog header="Association" [(visible)]="displayBasic" [draggable]="true" [resizable]="false" [style]="{width: '40vw'}">
-                        <form action="" [formGroup]="associationForm">
-                            <div class="">
-                                <div class="p-fluid grid col-12">
-                                    <div class="col-4 mt-2 text-right">
-                                        <label for="" class=" d-none d-md-inline-flex">Country <span class="req">*</span> :</label>
-                                    </div>
-                                    <div class="col-8 p-fluid">
-                                        <span class="p-float-label">
-                                            <p-dropdown [options]="allCountry" [(ngModel)]="selectedCountry" formControlName="country_id" placeholder="Select Country"
-                                                        optionLabel="country_name" optionValue="country_id" [showClear]="true" [filter]="true" filterBy="country_name"></p-dropdown>
-                                        </span>
-                                    </div>
-                                </div>
-                                <div class="p-fluid grid col-12">
-                                    <div class="col-4 mt-2 text-right">
-                                        <label for="" class="d-none d-md-inline-flex">Organization Type <span class="req">*</span> :</label>
-
-                                    </div>
-                                    <div class="col-8 p-fluid">
-                                        <span class="p-float-label">
-                                            <p-dropdown [options]="allOrganizationType" [(ngModel)]="selectedOrganizationType" formControlName="organization_type_id_enum" placeholder="Select Organization"
-                                                        optionLabel="organization_type_name_enum" optionValue="organization_type_id_enum"></p-dropdown>
-                                        </span>
-                                    </div>
-                                </div>
-                                <div class="p-fluid grid col-12">
-                                    <div class="col-4 mt-2 text-right">
-                                        <label for="" class=" d-none d-md-inline-flex">Name <span class="req">*</span> :</label>
-                                    </div>
-                                    <div class="col-8 p-fluid">
-                                        <span class="p-float-label">
-                                            <input id="float-input p-fluid" formControlName="association_name" type="text" placeholder="Association Name" pInputText autocomplete="off">
-                                        </span>
-                                    </div>
-                                </div>
-                                <div class="p-fluid grid col-12">
-                                    <div class="col-4 mt-2 text-right">
-                                        <label for="" class=" d-none d-md-inline-flex">Abbreviation:</label>
-                                    </div>
-                                    <div class="col-8 p-fluid">
-                                        <span class="p-float-label">
-                                            <input id="float-input p-fluid" formControlName="abbreviation" type="text" placeholder="Abbreviation" pInputText autocomplete="off">
-                                        </span>
-                                    </div>
-                                </div>
-                                <div class="p-fluid grid col-12">
-                                    <div class="col-4 mt-2 text-right">
-                                        <label for="" class=" d-none d-md-inline-flex">Remarks: </label>
-
-                                    </div>
-                                    <div class="col-8 p-fluid">
-                                        <span class="p-float-label">
-                                            <input id="float-input p-fluid" formControlName="remarks" type="text" placeholder="Remarks" pInputText>
-                                        </span>
-                                    </div>
-                                </div>
-
-
-                            </div>
-
-                        </form>
-                        <ng-template pTemplate="footer">
-                            <button type="submit" class="pi pi-save risBtn risSave" (click)="onFormSubmit()"> Save</button>
-                            <button class="pi pi-times risBtn risClose" (click)="displayBasic=false"> Close</button>
-                        </ng-template>
-                    </p-dialog>
-                    <!-- ************************start grid ************************ -->
-                    <p-table [value]="associations" dataKey="association_id" [paginator]="true" [rows]="10" selectionMode="single" [(selection)]="selectedAssociation" [showCurrentPageReport]="true" responsiveLayout="scroll" styleClass="p-datatable-striped p-datatable-sm"
-                             currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [rowsPerPageOptions]="[10,25,50]" (onRowSelect)="onRowSelect($event)" (onRowUnselect)="onRowUnselect($event)">
-                        <ng-template pTemplate="header">
-                            <tr>
-                                <th>Association Name</th>
-                                <th>Abbreviation</th>
-                                <th>Country</th>
-                                <th>Organization Type</th>
-                                <th>Remarks</th>
-                            </tr>
-                        </ng-template>
-                        <ng-template pTemplate="body" let-association>
-                            <tr [pSelectableRow]="association">
-                                <td>{{association.association_name}}</td>
-                                <td>{{association.abbreviation}}</td>
-                                <td>{{association.country_name}}</td>
-                                <td>{{association.organization_type_name_enum}}</td>
-                                <td>{{association.remarks}}</td>
-                            </tr>
-                        </ng-template>
-                    </p-table>
-                </div>
-                <!-- ********** end card body ******************** -->
-
+                <p-table [value]="associations" styleClass="p-datatable-striped p-datatable-gridlines p-datatable-sm" [paginator]="true" [rows]="10" selectionMode="single" [showCurrentPageReport]="true" responsiveLayout="scroll"
+                         [(selection)]="selectedAssociation" dataKey="association_id" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [rowsPerPageOptions]="[10,25,50]" (onRowSelect)="onRowSelect($event)" (onRowUnselect)="onRowUnselect($event)">
+                    <ng-template pTemplate="header">
+                        <tr>
+                            <th>Association Name</th>
+                            <th>Abbreviation</th>
+                            <th>Country</th>
+                            <th>Organization Type</th>
+                            <th>Remarks</th>
+                        </tr>
+                    </ng-template>
+                    <ng-template pTemplate="body" let-association>
+                        <tr [pSelectableRow]="association">
+                            <td>{{association.association_name}}</td>
+                            <td>{{association.abbreviation}}</td>
+                            <td>{{association.country_name}}</td>
+                            <td>{{association.organization_type_name_enum}}</td>
+                            <td>{{association.remarks}}</td>
+                        </tr>
+                    </ng-template>
+                </p-table>
+                <!--end grid display -------------->
             </div>
         </div>
     </div>
 </div>
+
 
