--- a/WebApp/src/app/features/administrative/bank-branch/bank-branch.component.html
+++ b/WebApp/src/app/features/administrative/bank-branch/bank-branch.component.html
@@ -163,9 +163,10 @@
             <!--end form display------------->
 
             <div [hidden]="gridDisplay">
-                <button pButton pRipple type="button" (click)="showBasicDialog()" label="New" class="risBtn risAdd mr-2 mb-2"></button>
-                <button pButton pRipple type="button" (click)="loadBankBranchToEdit()" label="Edit" class="risBtn risEdit mr-2 mb-2"></button>
-                <button pButton pRipple type="button" (click)="showDialog()" label="Delete" class="risBtn risDelete mr-2 mb-2"></button>
+                <button pButton pRipple type="button" (click)="showBasicDialog()" label="New" icon="pi pi-plus" class="risBtn risAdd mr-2 mb-2"></button>
+                <button pButton pRipple type="button" (click)="loadBankBranchToEdit()" label="Edit" icon="pi pi-pencil" class="risBtn risEdit mr-2 mb-2"></button>
+                <button pButton pRipple type="button" (click)="showDialog()" label="Delete" icon="pi pi-trash" class="risBtn risDelete mr-2 mb-2"></button>
+
                 <p-dialog header="Delete Record" [(visible)]="display" [style]="{width: '35vw'}">
                     <p>Do you want to delete this record?</p>
                     <ng-template pTemplate="footer">
@@ -174,32 +175,32 @@
                     </ng-template>
                 </p-dialog>
 
-                <p-table [value]="bankBranchs" dataKey="BankBranchId" [paginator]="true" [rows]="10" selectionMode="single" [(selection)]="selectedBankBranch" [showCurrentPageReport]="true" responsiveLayout="scroll" styleClass="p-datatable-striped p-datatable-sm"
-                         currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [rowsPerPageOptions]="[10,25,50]" (onRowSelect)="onRowSelect($event)" (onRowUnselect)="onRowUnselect($event)">
-                    <ng-template pTemplate="header">
-                        <tr>
-                            <th>Branch Name</th>
-                            <th>Bank Name</th>
-                            <th>Routing</th>
-                            <th>Country</th>
-                            <th>Division</th>
-                            <th>District</th>
-                            <th>Remarks</th>
-                        </tr>
-                    </ng-template>
-                    <ng-template pTemplate="body" let-bankBranch>
-                        <tr [pSelectableRow]="bankBranch">
-                            <td>{{bankBranch.BankBranchName}}</td>
-                            <td>{{bankBranch.BankName}}</td>
-                            <td>{{bankBranch.BankBranchRouting}}</td>
-                            <td>{{bankBranch.CountryName}}</td>
-                            <td>{{bankBranch.DivisionName}}</td>
-                            <td>{{bankBranch.DistrictName}}</td>
-                            <td>{{bankBranch.Remarks}}</td>
-                        </tr>
-                    </ng-template>
-                </p-table>
-                <!--end grid display -------------->
+                <p-table [value]="bankBranchs" styleClass="p-datatable-striped p-datatable-gridlines p-datatable-sm" [paginator]="true" [rows]="10" selectionMode="single" [showCurrentPageReport]="true" responsiveLayout="scroll"
+                         [(selection)]="selectedBankBranch" dataKey="BankBranchId" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [rowsPerPageOptions]="[10,25,50]" (onRowSelect)="onRowSelect($event)" (onRowUnselect)="onRowUnselect($event)">
+                        <ng-template pTemplate="header">
+                            <tr>
+                                <th>Branch Name</th>
+                                <th>Bank Name</th>
+                                <th>Routing</th>
+                                <th>Country</th>
+                                <th>Division</th>
+                                <th>District</th>
+                                <th>Remarks</th>
+                            </tr>
+                        </ng-template>
+                        <ng-template pTemplate="body" let-bankBranch>
+                            <tr [pSelectableRow]="bankBranch">
+                                <td>{{bankBranch.BankBranchName}}</td>
+                                <td>{{bankBranch.BankName}}</td>
+                                <td>{{bankBranch.BankBranchRouting}}</td>
+                                <td>{{bankBranch.CountryName}}</td>
+                                <td>{{bankBranch.DivisionName}}</td>
+                                <td>{{bankBranch.DistrictName}}</td>
+                                <td>{{bankBranch.Remarks}}</td>
+                            </tr>
+                        </ng-template>
+                    </p-table>
+                    <!--end grid display -------------->
             </div>
         </div>
     </div>
