--- a/WebApp/src/app/features/administrative/bank/bank.component.html
+++ b/WebApp/src/app/features/administrative/bank/bank.component.html
@@ -158,9 +158,10 @@
             <!--end form display------------->
 
             <div [hidden]="gridDisplay">
-                <button pButton pRipple type="button" (click)="showBasicDialog()" label="New" class="risBtn risAdd mr-2 mb-2"></button>
-                <button pButton pRipple type="button" (click)="loadBankToEdit()" label="Edit" class="risBtn risEdit mr-2 mb-2"></button>
-                <button pButton pRipple type="button" (click)="showDialog()" label="Delete" class="risBtn risDelete mr-2 mb-2"></button>
+
+                <button pButton pRipple type="button" (click)="showBasicDialog()" label="New" icon="pi pi-plus" class="risBtn risAdd mr-2 mb-2"></button>
+                <button pButton pRipple type="button" (click)="loadBankToEdit()" label="Edit" icon="pi pi-pencil" class="risBtn risEdit mr-2 mb-2"></button>
+                <button pButton pRipple type="button" (click)="showDialog()" label="Delete" icon="pi pi-trash" class="risBtn risDelete mr-2 mb-2"></button>
                 <p-dialog header="Delete Record" [(visible)]="display" [style]="{width: '35vw'}">
                     <p>Do you want to delete this record?</p>
                     <ng-template pTemplate="footer">
@@ -169,32 +170,32 @@
                     </ng-template>
                 </p-dialog>
 
-                <p-table [value]="banks" dataKey="BankId" [paginator]="true" [rows]="10" selectionMode="single" [(selection)]="selectedBank" [showCurrentPageReport]="true" responsiveLayout="scroll" styleClass="p-datatable-striped p-datatable-sm"
-                         currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [rowsPerPageOptions]="[10,25,50]" (onRowSelect)="onRowSelect($event)" (onRowUnselect)="onRowUnselect($event)">
-                    <ng-template pTemplate="header">
-                        <tr>
-                            <th>Name</th>
-                            <th>Short Name</th>
-                            <th>Swift Code</th>
-                            <th>Country</th>
-                            <th>Division</th>
-                            <th>District</th>
-                            <th>Remarks</th>
-                        </tr>
-                    </ng-template>
-                    <ng-template pTemplate="body" let-bank>
-                        <tr [pSelectableRow]="bank">
-                            <td>{{bank.BankName}}</td>
-                            <td>{{bank.BankShortName}}</td>
-                            <td>{{bank.BankSwiftCode}}</td>
-                            <td>{{bank.CountryName}}</td>
-                            <td>{{bank.DivisionName}}</td>
-                            <td>{{bank.DistrictName}}</td>
-                            <td>{{bank.Remarks}}</td>
-                        </tr>
-                    </ng-template>
-                </p-table>
-                <!--end grid display -------------->
+                <p-table [value]="banks" styleClass="p-datatable-striped p-datatable-gridlines p-datatable-sm" [paginator]="true" [rows]="10" selectionMode="single" [showCurrentPageReport]="true" responsiveLayout="scroll"
+                         [(selection)]="selectedBank" dataKey="BankId" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [rowsPerPageOptions]="[10,25,50]" (onRowSelect)="onRowSelect($event)" (onRowUnselect)="onRowUnselect($event)">
+                        <ng-template pTemplate="header">
+                            <tr>
+                                <th>Name</th>
+                                <th>Short Name</th>
+                                <th>Swift Code</th>
+                                <th>Country</th>
+                                <th>Division</th>
+                                <th>District</th>
+                                <th>Remarks</th>
+                            </tr>
+                        </ng-template>
+                        <ng-template pTemplate="body" let-bank>
+                            <tr [pSelectableRow]="bank">
+                                <td>{{bank.BankName}}</td>
+                                <td>{{bank.BankShortName}}</td>
+                                <td>{{bank.BankSwiftCode}}</td>
+                                <td>{{bank.CountryName}}</td>
+                                <td>{{bank.DivisionName}}</td>
+                                <td>{{bank.DistrictName}}</td>
+                                <td>{{bank.Remarks}}</td>
+                            </tr>
+                        </ng-template>
+                    </p-table>
+                    <!--end grid display -------------->
             </div>
         </div>
     </div>
