--- a/WebApp/src/app/features/administrative/mfs/mfs.component.html
+++ b/WebApp/src/app/features/administrative/mfs/mfs.component.html
@@ -1,106 +1,87 @@
-<div class="p-card">
+<div class="grid">
+    <div class="col-12">
+        <div class="card">
+            <h4>Mobile Finance Service</h4>
+            <div [hidden]="formDisplay">
+                <form action="" [formGroup]="mfsForm">
+                    <div class="col-12">
+                        <div class="p-fluid p-formgrid grid">
+                            <div class="field col-12 md:col-6">
+                                <label pTooltip="Country" tooltipPosition="top">Country<span class="req">*</span></label>
+                                <p-dropdown [options]="allCountry" formControlName="country_id"
+                                            [ngClass]="{ 'is-invalid': submitted && f.country_id.errors }" placeholder="---Select---"
+                                            optionLabel="country_name" optionValue="country_id" [showClear]="true" [filter]="true" filterBy="country_name"></p-dropdown>
 
-  <div class="me-auto">
-    <div class="p-card-title ">
-      <span class="pi pi-mfs"> </span> Mobile Finance Service
-    </div>
-    <div class="p-card-body">
-      <!-- ********** start card body ******************** -->
+                                <div *ngIf="submitted && f.country_id.errors" class="invalid-feedback">
+                                    <small *ngIf="f.country_id.errors.required" class="p-error">Country</small>
+                                </div>
+                            </div>
 
-      <div class="card">
-        <div class="grid mb-2">
-          <button class="pi pi-plus risBtn risAdd mr-2" (click)="showBasicDialog()"> New</button>
-          <button class="pi pi-pencil risBtn risEdit mr-2" (click)="loadMfsToEdit()"> Edit</button>
-          <button class="pi pi-trash risBtn risDelete mr-2" (click)="showDialog()"> Delete</button>
+                            <div class="field form-group col-12 md:col-6">
+                                <label pTooltip="MFS Name" tooltipPosition="top">MFS Name<span class="req">*</span> </label>
+                                <input id="lastname2" type="text" class="from-control" formControlName="mfs_name"
+                                       [ngClass]="{ 'is-invalid': submitted && f.mfs_name.errors }"
+                                       placeholder="" pInputText required />
+
+                                <div *ngIf="submitted && f.mfs_name.errors" class="invalid-feedback">
+                                    <small *ngIf="f.mfs_name.errors.required" class="p-error">MFS Name is required</small>
+                                </div>
+                            </div>
+
+                            <div class="field col-12 md:col-6">
+                                <label>Remarks </label>
+                                <input id="lastname2" type="text" formControlName="remarks" placeholder="remarks" pInputText />
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="flex justify-content-end pr-2">
+                        <button pButton pRipple type="button" (click)="onFormSubmit()" label="Save" class="risBtn risSave mr-2 mb-2" icon="pi pi-check"></button>
+                        <button pButton pRipple type="button" (click)="toggleFormClose()" label="Close" class="risBtn risClose mr-2 mb-2" icon="pi pi-times"></button>
+                    </div>
+
+                </form>
+            </div>
+
+            <!--end form display------------->
+
+            <div [hidden]="gridDisplay">
+
+                <button pButton pRipple type="button" (click)="showBasicDialog()" label="New" icon="pi pi-plus" class="risBtn risAdd mr-2 mb-2"></button>
+                <button pButton pRipple type="button" (click)="loadMfsToEdit()" label="Edit" icon="pi pi-pencil" class="risBtn risEdit mr-2 mb-2"></button>
+                <button pButton pRipple type="button" (click)="showDialog()" label="Delete" icon="pi pi-trash" class="risBtn risDelete mr-2 mb-2"></button>
+
+                <p-dialog header="Delete Record" [(visible)]="display" [style]="{width: '35vw'}">
+                    <p>Do you want to delete this record?</p>
+                    <ng-template pTemplate="footer">
+                        <button class="pi pi-check risBtn risSave" (click)="deleteMfsInfo()"> Yes</button>
+                        <button class="pi pi-times risBtn risClose" (click)="display=false"> No</button>
+                    </ng-template>
+                </p-dialog>
+                <p-table [value]="mfss" styleClass="p-datatable-striped p-datatable-gridlines p-datatable-sm" [paginator]="true" [rows]="10" selectionMode="single" [showCurrentPageReport]="true" responsiveLayout="scroll"
+                         [(selection)]="selectedMfs" dataKey="mfs_id" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [rowsPerPageOptions]="[10,25,50]" (onRowSelect)="onRowSelect($event)" (onRowUnselect)="onRowUnselect($event)">
+                    <ng-template pTemplate="header">
+                        <tr>
+                            <th>MFS Name</th>
+                            <th>Country</th>
+                            <th>Remarks</th>
+                        </tr>
+                    </ng-template>
+                    <ng-template pTemplate="body" let-mfs>
+                        <tr [pSelectableRow]="mfs">
+                            <td>{{mfs.mfs_name}}</td>
+                            <td>{{mfs.country_name}}</td>
+                            <td>{{mfs.remarks}}</td>
+                        </tr>
+                    </ng-template>
+                </p-table>
+                <!--end grid display -------------->
+            </div>
         </div>
-
-        <p-dialog header="Delete Record" [(visible)]="display" [style]="{width: '35vw'}">
-          <p>Do you want to delete this record?</p>
-          <ng-template pTemplate="footer">
-            <button class="pi pi-times risBtn risClose" (click)="display=false"> No</button>
-            <button class="pi pi-check risBtn risSave" (click)="deleteRegulatorInfo()"> Yes</button>
-          </ng-template>
-        </p-dialog>
-
-        <div class="card-body">
-
-          <p-dialog header="mfs" [(visible)]="displayBasic" [draggable]="true" [resizable]="false" [style]="{width: '40vw'}">
-            <form action="" [formGroup]="mfsForm">
-                <div class="">
-
-                    <div class="p-fluid grid col-12">
-                        <div class="col-4 mt-2 text-right">
-                            <label for="" class=" d-none d-md-inline-flex">Country <span class="req">*</span> :</label>
-                        </div>
-                        <div class="col-8 p-fluid">
-                            <span class="p-float-label">
-                                <p-dropdown [options]="allCountry" [(ngModel)]="selectedCountry" formControlName="country_id" placeholder="Select Country"
-                                            optionLabel="country_name" optionValue="country_id"></p-dropdown>
-                            </span>
-                        </div>
-                    </div>
-
-                    <div class="p-fluid grid col-12">
-                        <div class="col-4 mt-2 text-right">
-                            <label for="" class=" d-none d-md-inline-flex">MFS Name <span class="req">*</span> :</label>
-                        </div>
-                        <div class="col-8 p-fluid">
-                            <span class="p-float-label">
-                                <input id="float-input p-fluid" formControlName="mfs_name" type="text" placeholder="MFS Name" pInputText autocomplete="off">
-                            </span>
-                        </div>
-                    </div>
-
-                    <div class="p-fluid grid col-12">
-                        <div class="col-4 mt-2 text-right">
-                            <label for="" class=" d-none d-md-inline-flex">Remarks: </label>
-
-                        </div>
-                        <div class="col-8 p-fluid">
-                            <span class="p-float-label">
-                                <input id="float-input p-fluid" formControlName="remarks" type="text" placeholder="Remarks" pInputText>
-                            </span>
-                        </div>
-                    </div>
-
-
-                </div>
-
-            </form>
-            <ng-template pTemplate="footer">
-              <button type="submit" class="pi pi-save risBtn risSave" (click)="onFormSubmit()"> Save</button>
-              <button class="pi pi-times risBtn risClose" (click)="displayBasic=false"> Close</button>
-            </ng-template>
-          </p-dialog>
-          <!-- ************************start grid ************************ -->
-          <p-table [value]="mfss" dataKey="mfs_id" [paginator]="true" [rows]="10" selectionMode="single" [(selection)]="selectedMfs" [showCurrentPageReport]="true" responsiveLayout="scroll" styleClass="p-datatable-striped p-datatable-sm"
-                       currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [rowsPerPageOptions]="[10,25,50]" (onRowSelect)="onRowSelect($event)" (onRowUnselect)="onRowUnselect($event)">
-
-                  <ng-template pTemplate="header">
-                      <tr>
-                          <th>MFS Name</th>
-                          <th>Country</th>
-                          <th>Remarks</th>
-                      </tr>
-                  </ng-template>
-                  <ng-template pTemplate="body" let-mfs>
-
-                      <tr [pSelectableRow]="mfs">
-                          <td>{{mfs.mfs_name}}</td>
-                          <td>{{mfs.country_name}}</td>
-                          <td>{{mfs.remarks}}</td>
-                      </tr>
-                  </ng-template>
-              </p-table>
-
-
-</div>
-
-        <!-- ********** end card body ******************** -->
-
-      </div>
     </div>
-  </div>
 </div>
+
+
+
 
 
