dealer theme updated

--- a/WebApp/src/app/features/party/dealerinfo/dealerinfo.component.html
+++ b/WebApp/src/app/features/party/dealerinfo/dealerinfo.component.html
@@ -231,7 +231,7 @@
                                     </div>
                                     <div class="field col-12 md:col-6">
                                         <label pTooltip="City/Town" tooltipPosition="top">City/Town </label>
-                                        <input type="text" formControlName="ps_area" placeholder="" pInputText />
+                                        <input type="text" formControlName="city" placeholder="" pInputText />
                                     </div>
 
                                     <div class="field col-12 md:col-6">
